--- a/src/touchpoint-ui/Components/Inputs/InputStyles.css
+++ b/src/touchpoint-ui/Components/Inputs/InputStyles.css
@@ -6,7 +6,7 @@
 	outline: none !important;
 	padding: 5px 15px;
 	border-radius: 20px;
-	border: none;
+	border: 1px solid var(--borderColor);
 	font-size: 12pt;
 }
 
